Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+4.16.7
+======
+- Prevent crash if invalid-symlink is used as bookmark (Issue #552)
+- Dont execute files, passed via command line due to security risks
+- Avoid excessively checking whether files are executables (#180)
+- CDDA appears twice in side pane (Issue #486)
+- Critical error when opening Edit menu (Issue #542)
+- Shortcuts view regression : Watch trash for changes (Issue #538)
+- Translation Updates:
+  Arabic, Bulgarian, Estonian, Galician, Hungarian, Italian, Norwegian
+  Bokmål, Portuguese, Spanish, Swedish, Thai, Turkish
+
 4.16.6
 ======
 - Reload current directory before selecting new files (Issue #524)
