Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,46 @@
+4.17.2
+======
+- Prevent crash if non-existing bookmark is right-clicked (Issue #552)
+- Sendto-menu: Renamed "Create Shortcut" to "Add Bookmark"
+- Allow middle-clicking navigation buttons (Issue #98)
+- Support `Today`/`Yesterday` option for custom date styles (Issue #292)
+- Prevent crash if invalid-symlink is used as bookmark (Issue #552)
+- Scroll to correct height after changing to a parent dir (Issue #531)
+- Dont execute files, passed via command line due to security risks
+- Move 'reload' button out of pathbar (Issue #559)
+- Improve usability of Computer:// in list view (Issue #297)
+- Select the correct bookmark after opening a new window (Issue #106)
+- Shortcut-view regression: Middle mouse click on folder did not work
+- Scroll to the correct height after changing to parent dir (Issue #531)
+- Make use of xfce icon "org.xfce.settings.default-applications"
+- Avoid excessively checking whether files are executables (Issue #180)
+- Add Option to keep focus while opening folder in new tab (Issue #364)
+- Add `Add Bookmark` menu item to the Go menu (Issue #283)
+- On "Select by Pattern" add option for case sensitivity (Issue #173)
+- CDDA appears twice in side pane (Issue #486)
+- Add `Empty Trash` infobar while in the trash folder (Issue #11)
+- Add section 'Default Application' for app. selection (Issue #342)
+- BulkRenamer: Preselect `Name and Suffix` if only dirs are selected
+- List view: Leave size column blank for directories (Issue #543)
+- BulkRenamer: Split 'Rename' button into 'Apply' and 'Done' (Issue #22)
+- Critical error when opening Edit menu (Issue #542)
+- Add menu entry 'Set Default App' to 'Open with' submenu (Issue #342)
+- Shortcuts view regression : Watch trash for changes (Issue #538)
+- Fix `misc-full-path-in-title` memory fault (Issue #484)
+- Add 'sort by Date Deleted' option to 'arrange items' menu (Issue #123)
+- Add 'date deleted' column for the trash directory (Issue #123)
+- Translation Updates:
+  Albanian, Arabic, Armenian, Armenian (Armenia), Asturian, Basque,
+  Bengali, Bulgarian, Catalan, Chinese (China), Chinese (Hong Kong),
+  Chinese (Taiwan), Czech, Danish, Dutch, Eastern Armenian, English
+  (Australia), English (United Kingdom), Esperanto, Estonian, Finnish,
+  French, Galician, German, Greek, Hebrew, Hungarian, Icelandic,
+  Indonesian, Interlingue, Italian, Japanese, Kazakh, Korean, Latvian,
+  Malay, Norwegian Bokmål, Norwegian Nynorsk, Occitan (post 1500),
+  Panjabi (Punjabi), Persian (Iran), Polish, Portuguese, Portuguese
+  (Brazil), Romanian, Serbian, Slovak, Spanish, Swedish, Telugu, Thai,
+  Turkish, Urdu, Urdu (Pakistan), Uyghur, Vietnamese
+
 4.17.1
 ======
 - Use a more specific device eject label (Issue #153)
