Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+4.16.8
+======
+- Activating Desktop Icon does not Use Default Application (Issue #575)
+- Translation Updates: Spanish
+
 4.16.7
 ======
 - Prevent crash if invalid-symlink is used as bookmark (Issue #552)
