Updates for release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+4.17.3
+======
+- Regression: Activating Desktop Icon does not Use Default Application 
+(Issue #575)
+
+
 4.17.2
 ======
 - Prevent crash if non-existing bookmark is right-clicked (Issue #552)
