--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+4.16.10
+======
+- Fix signal disconnect to prevent crash (#553)
+- Don't go beyond THUNAR_N_VISIBLE_COLUMNS while parsing col widths
+
 4.16.9
 ======
 - Listen to changes on shortcuts to update them when required
