--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,23 @@
+4.17.6
+======
+- Reset sort_column if it exceeds THUNAR_N_VISIBLE_COLUMNS
+- Avoid many 'Failed to open directory' windows (Issue #660)
+- Add file & folder count on the properties dialog (Issue #395)
+- Use basename instead of display_name for file duplication (Issue #649)
+- Fix signal disconnect in thunar_window_unrealize to prevent crash
+- Don't go beyond THUNAR_N_VISIBLE_COLUMNS while parsing col widths
+- Translation Updates:
+  Albanian, Arabic, Armenian, Armenian (Armenia), Asturian, Basque,
+  Bengali, Catalan, Chinese (China), Chinese (Hong Kong), Chinese
+  (Taiwan), Czech, Danish, Dutch, Eastern Armenian, English
+  (Australia), English (United Kingdom), Esperanto, Estonian, Finnish,
+  French, Galician, German, Greek, Hebrew, Hungarian, Icelandic,
+  Indonesian, Interlingue, Japanese, Kazakh, Korean, Latvian, Malay,
+  Norwegian Bokmål, Norwegian Nynorsk, Occitan (post 1500), Panjabi
+  (Punjabi), Persian (Iran), Polish, Portuguese, Portuguese (Brazil),
+  Romanian, Serbian, Slovak, Spanish, Swedish, Telugu, Thai, Turkish,
+  Urdu, Urdu (Pakistan), Uyghur, Vietnamese
+
 4.17.5
 ======
 - Listen to changes on shortcuts to update them when required
